mudei para o mongo local

--- a/BDAProject.ipynb
+++ b/BDAProject.ipynb
@@ -109,7 +109,7 @@
     "# MongoDB do Miguel Dinis\n",
     "# client = MongoClient(\"mongodb+srv://fc58198:ClusterPass@cluster0.wbcd4.mongodb.net/\") \n",
     "# MongoDB do Rafa\n",
-    "client = MongoClient(\"mongodb+srv://Rafacorreia0611:XgwqV2U4poLAF4WX@cluster0.meuglyb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\", server_api=ServerApi('1'))\n",
+    "client = MongoClient(\"mongodb://localhost:27017\")\n",
     "\n",
     "#Send a ping to the server to check if the connection is working\n",
     "try:\n",
