Login info do Borges

--- a/BDAProject.ipynb
+++ b/BDAProject.ipynb
@@ -119,6 +119,8 @@
     "# client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Afonso\n",
     "client = MongoClient(\"mongodb://localhost:27017\")\n",
+    "# MongoDB do Miguel Borges\n",
+    "# client = MongoClient(\"mongodb+srv://mfsb3110:Cfsb1705@cluster10.azlt2.mongodb.net/\")\n",
     "\n",
     "#Send a ping to the server to check if the connection is working\n",
     "try:\n",
@@ -301,6 +303,8 @@
     "# password = 'olaolaola'\n",
     "# Password do Afonso\n",
     "password = '1234'\n",
+    "# Passowrd do Miguel\n",
+    "# password = 'abc123'\n",
     "host = 'localhost'\n",
     "port = '3306'\n",
     "database_name = 'football_db'\n",
