--- a/BDAProject.ipynb
+++ b/BDAProject.ipynb
@@ -37,13 +37,13 @@
     "\n",
     "Questões para perguntar na TP:\n",
     "- Perguntar se para a base de dados no mongo, vale a pena juntar todos os dados numa collection apenas, adicionando uma lista de goalscorers e uma variavel shootouts, para tornar mais eficiente(Se sim, o que fazer às linhas dos shootouts e goalscorers que não têm match nos results e como aumentar a rapidez disto)\n",
-    "- Perguntar se utilizamos um validor(se sim qual, porque o que demos na tp é de jsonschema)\n",
+    "- Perguntar o que fazemos aos minutos que tao nulos e aos shootouts q n têm result\n",
+    "- Uma ideia de como fazer o esquema da base de dados relacional, qual seria a relação\n",
     "\n",
     "Por fazer:\n",
     "- tratar os dados dos 3 csvs\n",
     "- criar as duas queries complexas com operações (INSERT, DELETE, ALERT TABLE)\n",
     "- criar tabelas relacionais em SQL\n",
-    "- criar apenas uma tabela em mongo(em processo, rafa)\n",
     "- criar um validator das tabelas\n",
     "- fazer o relatório\n",
     "- comentar código desorganizado"
