falta as duas querys complexas do mongo e "tudo" de sql

--- a/BDAProject_organized.ipynb
+++ b/BDAProject_organized.ipynb
@@ -34,7 +34,8 @@
    "source": [
     "import pandas as pd\n",
     "from pymongo import MongoClient\n",
-    "import random"
+    "import random\n",
+    "import datetime"
    ]
   },
   {
@@ -310,13 +311,102 @@
     "\n",
     "df_matches = pd.merge(df_matches, grouped_shootouts, on=['date', 'home_team', 'away_team'], how='left')\n",
     "\n",
-    "# Fill the NaN values with an empty dictionary\n",
+    "# Fill the NaN values with None\n",
     "\n",
     "df_matches['shootout'] = df_matches['shootout'].apply(lambda x: None if isinstance(x, float) and pd.isna(x) else x)\n",
     "\n",
     "# Insert the data into the database\n",
     "\n",
     "collection_results.insert_many(df_matches.to_dict(orient='records'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Queries on MongoDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Two simple queries on MongoDB\n",
+    "\n",
+    "The two simple queries are:\n",
+    "1. Games where Portugal scored more than 3 goals after 2003\n",
+    "2. Games where Australia and Sweden played against each other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Querie 1\n",
+    "\n",
+    "# We need to convert the date to a datetime object to compare it with the date_limit\n",
+    "date_limit = datetime.datetime(2003, 12, 31)\n",
+    "\n",
+    "querie1 = {\n",
+    "        \"description\": \"Games where Portugal scored more than 3 goals after 2003\",\n",
+    "        \"query\": {\n",
+    "            \"$and\": [\n",
+    "                {\"$or\": [{\"home_team\": \"Portugal\", \"home_score\": {\"$gt\": 3}},\n",
+    "                         {\"away_team\": \"Portugal\", \"away_score\": {\"$gt\": 3}}]},\n",
+    "                {\"date\": {\"$gt\": date_limit}}\n",
+    "            ]\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "# Querie 2\n",
+    "querie2 = {\n",
+    "        \"description\": \"Games where Australia and Sweden played against each other\",\n",
+    "        \"query\": {\n",
+    "            \"$or\": [\n",
+    "                {\"home_team\": \"Australia\", \"away_team\": \"Sweden\"},\n",
+    "                {\"home_team\": \"Sweden\", \"away_team\": \"Australia\"}\n",
+    "            ]\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "# Execute the queries\n",
+    "\n",
+    "results = collection_results.find(querie1['query'])\n",
+    "print(\"Results for querie 1:\")\n",
+    "for result in results:\n",
+    "    print(result)\n",
+    "    \n",
+    "results = collection_results.find(querie2['query'])\n",
+    "print(\"Results for querie 2:\")\n",
+    "for result in results:\n",
+    "    print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Two complex queries(EM PROCESSO POR RAFA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Insert a goal in the goalscorers array, with team = 'Portugal', scorer = 'Ronaldo', minute = 90, own_goal = false, penalty = false, in every match in 2004 that lost more than 50 matches in 2003\n",
+    "\n",
+    "# querie1 = {\n",
+    "#         \"description\": \"Every team that lost more than 50 matches in 2003\",\n",
+    "#         \"query\": { \n",
+    "#             \"date\": {\"$lt\": datetime.datetime(2004, 1, 1), \"$gte\": datetime.datetime(2003, 1, 1)},\n",
+    "            \n",
+    "#         }\n",
+    "#     }"
    ]
   }
  ],
