A primeira complex query já está feita no mongo, falta a segunda

--- a/BDAProject_organized.ipynb
+++ b/BDAProject_organized.ipynb
@@ -389,7 +389,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Two complex queries(EM PROCESSO POR RAFA)"
+    "## Two complex queries\n",
+    "\n"
    ]
   },
   {
@@ -398,15 +399,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Insert a goal in the goalscorers array, with team = 'Portugal', scorer = 'Ronaldo', minute = 90, own_goal = false, penalty = false, in every match in 2004 that lost more than 50 matches in 2003\n",
+    "# # Change the neutral field to True for the matches that have more than 5 goals scored and that both teams have played with each other at least 100 times\n",
     "\n",
-    "# querie1 = {\n",
-    "#         \"description\": \"Every team that lost more than 50 matches in 2003\",\n",
-    "#         \"query\": { \n",
-    "#             \"date\": {\"$lt\": datetime.datetime(2004, 1, 1), \"$gte\": datetime.datetime(2003, 1, 1)},\n",
-    "            \n",
-    "#         }\n",
-    "#     }"
+    "# Obtain the teams that have played with each other at least 100 times\n",
+    "pipeline = [\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"team_pair\": {\n",
+    "                \"$cond\": [\n",
+    "                    { \"$lt\": [\"$home_team\", \"$away_team\"] },\n",
+    "                    { \"home_team\": \"$home_team\", \"away_team\": \"$away_team\" },\n",
+    "                    { \"home_team\": \"$away_team\", \"away_team\": \"$home_team\" }\n",
+    "                ]\n",
+    "            }\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$group\": {\n",
+    "            \"_id\": \"$team_pair\",\n",
+    "            \"count\": { \"$sum\": 1 }\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$match\": {\n",
+    "            \"count\": { \"$gt\": 100 }\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Get the teams that have played with each other at least 100 times\n",
+    "teams_that_played_at_least_100_times = list(collection_results.aggregate(pipeline))\n",
+    "\n",
+    "\n",
+    "matched_count = 0\n",
+    "modified_count = 0\n",
+    "\n",
+    "# Iterate over the teams that have played with each other at least 100 times and update the matches that have more than 5 goals scored\n",
+    "for team_pair in teams_that_played_at_least_100_times:\n",
+    "    home_team = team_pair['_id']['home_team']\n",
+    "    away_team = team_pair['_id']['away_team']\n",
+    "    \n",
+    "    try:\n",
+    "        # Update the matches that have more than 5 goals scored and that the teams are in the team_pair\n",
+    "        results = collection_results.update_many(\n",
+    "            {\n",
+    "                \"$or\": [\n",
+    "                    {\"home_team\": home_team, \"away_team\": away_team},\n",
+    "                    {\"home_team\": away_team, \"away_team\": home_team}\n",
+    "                ],\n",
+    "                \"$expr\": {\"$gt\": [{\"$add\": [\"$home_score\", \"$away_score\"]}, 5]}\n",
+    "            },\n",
+    "            {\n",
+    "                \"$set\": {\n",
+    "                    \"neutral\": True\n",
+    "                }\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "        matched_count += results.matched_count\n",
+    "        modified_count += results.modified_count\n",
+    "    except Exception as e:\n",
+    "        print(\"Error updating the documents, error: \", e)\n",
+    "        \n",
+    "        \n",
+    "print(\"Matched count: \", matched_count)\n",
+    "print(\"Modified count: \", modified_count)\n",
+    "    "
    ]
   }
  ],
