Tudo feito, toca a trabalhar batista

--- a/BDAProject_organized.ipynb
+++ b/BDAProject_organized.ipynb
@@ -218,20 +218,28 @@
     "                },\n",
     "            },\n",
     "            \"shootout\": {\n",
-    "                \"bsonType\": \"object, null\",\n",
-    "                \"description\": \"Optional object for shootout details\",\n",
-    "                \"required\": [\"winner\", \"first_shooter\"],\n",
-    "                \"properties\": {\n",
-    "                    \"winner\": {\n",
-    "                        \"bsonType\": \"string\",\n",
-    "                        \"description\": \"Must be a string representing the shootout winner\",\n",
+    "                \"oneOf\": [\n",
+    "                    {\n",
+    "                        \"bsonType\": \"null\",\n",
+    "                        \"description\": \"Can be null if no shootout occurred\",\n",
     "                    },\n",
-    "                    \"first_shooter\": {\n",
-    "                        \"bsonType\": \"string\",\n",
-    "                        \"description\": \"Must be a string representing the first shooter\",\n",
+    "                    {\n",
+    "                        \"bsonType\": \"object\",\n",
+    "                        \"description\": \"Optional object for shootout details\",\n",
+    "                        \"required\": [\"winner\", \"first_shooter\"],\n",
+    "                        \"properties\": {\n",
+    "                            \"winner\": {\n",
+    "                                \"bsonType\": \"string\",\n",
+    "                                \"description\": \"Must be a string representing the shootout winner\",\n",
+    "                            },\n",
+    "                            \"first_shooter\": {\n",
+    "                                \"bsonType\": \"string\",\n",
+    "                                \"description\": \"Must be a string representing the first shooter\",\n",
+    "                            },\n",
+    "                        },\n",
     "                    },\n",
-    "                },\n",
-    "            },\n",
+    "                ],\n",
+    "            }\n",
     "        },\n",
     "    }\n",
     "}"
@@ -390,7 +398,10 @@
    "metadata": {},
    "source": [
     "## Two complex queries\n",
-    "\n"
+    "The two complex queries are:\n",
+    "\n",
+    "1. Change the neutral field to True for the matches that have more than 5 goals scored and that both teams have played with each other at least 100 times\n",
+    "2. Add a goalscorer to the goalscorers list from Cristiano Ronaldo on minute 90 to the 100 matches with the most difference in goals scored between the two teams, and increment the loser team score by 1"
    ]
   },
   {
@@ -399,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Change the neutral field to True for the matches that have more than 5 goals scored and that both teams have played with each other at least 100 times\n",
+    "# Complex querie 1\n",
     "\n",
     "# Obtain the teams that have played with each other at least 100 times\n",
     "pipeline = [\n",
@@ -431,6 +442,11 @@
     "\n",
     "# Get the teams that have played with each other at least 100 times\n",
     "teams_that_played_at_least_100_times = list(collection_results.aggregate(pipeline))\n",
+    "\n",
+    "# Print the teams that have played with each other at least 100 times\n",
+    "print(\"Teams that have played with each other at least 100 times:\")\n",
+    "for team_pair in teams_that_played_at_least_100_times:\n",
+    "    print(\"Home team: \", team_pair['_id']['home_team'], \", Away team: \", team_pair['_id']['away_team'], \", Count: \", team_pair['count'])\n",
     "\n",
     "\n",
     "matched_count = 0\n",
@@ -467,6 +483,93 @@
     "print(\"Matched count: \", matched_count)\n",
     "print(\"Modified count: \", modified_count)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complex querie 2\n",
+    "\n",
+    "# Get the matches with the most difference between the home_score and away_score\n",
+    "pipeline = [\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"difference\": {\"$abs\": {\"$subtract\": [\"$home_score\", \"$away_score\"]}},\n",
+    "            \"date\": 1,\n",
+    "            \"home_team\": 1,\n",
+    "            \"away_team\": 1,\n",
+    "        }\n",
+    "    },\n",
+    "    {\"$sort\": {\"difference\": -1}},\n",
+    "    {\"$limit\": 100},\n",
+    "]\n",
+    "\n",
+    "matches_with_most_difference = list(collection_results.aggregate(pipeline))\n",
+    "\n",
+    "# Print the matches with the most difference between the home_score and away_score\n",
+    "counter = 1\n",
+    "print(\"Matches with the most difference between the home_score and away_score:\")\n",
+    "for match in matches_with_most_difference:\n",
+    "    print(\"Match number: \", counter, \", Difference: \", match['difference'], \", Date: \", match['date'], \", Home team: \", match['home_team'], \", Away team: \", match['away_team'])\n",
+    "\n",
+    "matched_count = 0\n",
+    "modified_count = 0\n",
+    "\n",
+    "# Iterate over the matches with the most difference between the home_score and away_score and add a goal to Cristiano Ronaldo in the 90th minute and update the scores\n",
+    "for match in matches_with_most_difference:\n",
+    "    home_team = match[\"home_team\"]\n",
+    "    away_team = match[\"away_team\"]\n",
+    "    date = match[\"date\"]\n",
+    "\n",
+    "    try:\n",
+    "        results = collection_results.update_one(\n",
+    "            {\"home_team\": home_team, \"away_team\": away_team, \"date\": date},\n",
+    "            [\n",
+    "                {\n",
+    "                    \"$set\": {\n",
+    "                        \"home_score\": {\n",
+    "                            \"$cond\": {\n",
+    "                                \"if\": {\"$lt\": [\"$home_score\", \"$away_score\"]},\n",
+    "                                \"then\": {\"$add\": [\"$home_score\", 1]},\n",
+    "                                \"else\": \"$home_score\",\n",
+    "                            }\n",
+    "                        },\n",
+    "                        \"away_score\": {\n",
+    "                            \"$cond\": {\n",
+    "                                \"if\": {\"$gt\": [\"$home_score\", \"$away_score\"]},\n",
+    "                                \"then\": {\"$add\": [\"$away_score\", 1]},\n",
+    "                                \"else\": \"$away_score\",\n",
+    "                            }\n",
+    "                        },\n",
+    "                        \"goalscorers\": {\n",
+    "                            \"$concatArrays\": [\n",
+    "                                {\"$ifNull\": [\"$goalscorers\", []]},\n",
+    "                                [\n",
+    "                                    {\n",
+    "                                        \"team\": \"Portugal\",\n",
+    "                                        \"scorer\": \"Cristiano Ronaldo\",\n",
+    "                                        \"minute\": 90.0,\n",
+    "                                        \"own_goal\": False,\n",
+    "                                        \"penalty\": False,\n",
+    "                                    }\n",
+    "                                ],\n",
+    "                            ]\n",
+    "                        },\n",
+    "                    }\n",
+    "                }\n",
+    "            ],\n",
+    "        )\n",
+    "\n",
+    "        matched_count += results.matched_count\n",
+    "        modified_count += results.modified_count\n",
+    "    except Exception as e:\n",
+    "        print(\"Error updating the documents, error: \", e)\n",
+    "\n",
+    "print(\"Matched count: \", matched_count)\n",
+    "print(\"Modified count: \", modified_count)"
    ]
   }
  ],
