Finished all of SQL except for the last complex query
Created sql connection
created tables
inserted data
did 2 simple querys
did 1 complex query

--- a/BDAProject_organized.ipynb
+++ b/BDAProject_organized.ipynb
@@ -35,7 +35,9 @@
     "import pandas as pd\n",
     "from pymongo import MongoClient\n",
     "import random\n",
-    "import datetime"
+    "import datetime\n",
+    "import mysql.connector\n",
+    "from sqlalchemy import create_engine, text"
    ]
   },
   {
@@ -88,7 +90,7 @@
     "\n",
     "print(df_results.head(10))\n",
     "print(df_goalscorers.head(10))\n",
-    "print(df_shootouts.head(10))\n"
+    "print(df_shootouts.head(10))"
    ]
   },
   {
@@ -114,9 +116,9 @@
     "# MongoDB do Miguel Dinis\n",
     "# client = MongoClient(\"mongodb+srv://fc58198:ClusterPass@cluster0.wbcd4.mongodb.net/\") \n",
     "# MongoDB do Rafa\n",
-    "client = MongoClient(\"mongodb://localhost:27017\")\n",
+    "#client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Afonso\n",
-    "# client = MongoClient(\"mongodb://localhost:27017\")\n",
+    "client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Miguel Borges\n",
     "# client = MongoClient(\"mongodb+srv://mfsb3110:Cfsb1705@cluster10.azlt2.mongodb.net/\")"
    ]
@@ -571,11 +573,424 @@
     "print(\"Matched count: \", matched_count)\n",
     "print(\"Modified count: \", modified_count)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connecting to MYSQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a MySQL database, a table named \"Football\" to store the data\n",
+    "# Afonso\n",
+    "username = 'root'\n",
+    "password = \"1234\"\n",
+    "# Miguel Dinis\n",
+    "# username = 'root'\n",
+    "# password = \"1234\"\n",
+    "# Rafael\n",
+    "# username = 'root'\n",
+    "# password = \"1234\"\n",
+    "# Miguel Borges\n",
+    "# username = 'root'\n",
+    "# password = \"1234\"\n",
+    "host = 'localhost'\n",
+    "port = '3306'\n",
+    "database_name = 'football_db'\n",
+    "table_name = 'football'\n",
+    "\n",
+    "# Create a connection to the MySQL server\n",
+    "db_url = f'mysql+mysqlconnector://{username}:{password}@{host}:{port}'\n",
+    "engine = create_engine(db_url)\n",
+    "\n",
+    "# Test connection\n",
+    "try:\n",
+    "    with engine.connect() as connection:\n",
+    "        print(\"Successfully connected to MySQL server.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error connecting to MySQL: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating the database\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the database\n",
+    "try:\n",
+    "    with engine.connect() as connection:\n",
+    "        connection.execute(text(f\"DROP DATABASE IF EXISTS {database_name}\"))  # Optional: Drops if already exists\n",
+    "        connection.execute(text(f\"CREATE DATABASE {database_name}\"))\n",
+    "        print(f\"Database '{database_name}' created successfully.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating database: {e}\")\n",
+    "\n",
+    "# Use the specific database\n",
+    "db_url = f'mysql+mysqlconnector://{username}:{password}@{host}:{port}/{database_name}'\n",
+    "engine = create_engine(db_url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the relational schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SQL commands for individual table creation\n",
+    "create_matches_table = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS matches (\n",
+    "    match_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    date DATE NOT NULL,\n",
+    "    home_team VARCHAR(100) NOT NULL,\n",
+    "    away_team VARCHAR(100) NOT NULL,\n",
+    "    home_score INT NOT NULL,\n",
+    "    away_score INT NOT NULL,\n",
+    "    tournament VARCHAR(100),\n",
+    "    city VARCHAR(100),\n",
+    "    country VARCHAR(100),\n",
+    "    neutral BOOLEAN\n",
+    ");\n",
+    "\"\"\"\n",
+    "\n",
+    "create_goalscorers_table = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS goalscorers (\n",
+    "    goal_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    match_id INT NOT NULL,\n",
+    "    team VARCHAR(100) NOT NULL,\n",
+    "    scorer VARCHAR(100) NOT NULL,\n",
+    "    minute DOUBLE NOT NULL,\n",
+    "    penalty BOOLEAN,\n",
+    "    own_goal BOOLEAN,\n",
+    "    FOREIGN KEY (match_id) REFERENCES matches(match_id)\n",
+    ");\n",
+    "\"\"\"\n",
+    "\n",
+    "create_shootouts_table = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS shootouts (\n",
+    "    shootout_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    match_id INT NOT NULL,\n",
+    "    winner VARCHAR(100),\n",
+    "    first_shooter VARCHAR(100),\n",
+    "    FOREIGN KEY (match_id) REFERENCES matches(match_id)\n",
+    ");\n",
+    "\"\"\"\n",
+    "\n",
+    "# Execute each CREATE TABLE command separately\n",
+    "try:\n",
+    "    with engine.connect() as connection:\n",
+    "        connection.execute(text(create_matches_table))\n",
+    "        print(\"Table 'matches' created successfully.\")\n",
+    "        \n",
+    "        connection.execute(text(create_goalscorers_table))\n",
+    "        print(\"Table 'goalscorers' created successfully.\")\n",
+    "        \n",
+    "        connection.execute(text(create_shootouts_table))\n",
+    "        print(\"Table 'shootouts' created successfully.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating tables: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data insertion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Batch size for inserts\n",
+    "batch_size = 100  # You can adjust this based on your dataset size\n",
+    "\n",
+    "insert_matches_query = \"\"\"\n",
+    "INSERT INTO matches (date, home_team, away_team, home_score, away_score, tournament, city, country, neutral)\n",
+    "VALUES (:date, :home_team, :away_team, :home_score, :away_score, :tournament, :city, :country, :neutral)\n",
+    "\"\"\"\n",
+    "\n",
+    "# Connect to the database and execute the insert queries\n",
+    "try:\n",
+    "    with engine.begin() as connection:\n",
+    "        batch_data = []  # Temporary list to hold rows for batch insert\n",
+    "        for index, row in df_results.iterrows():\n",
+    "            batch_data.append({\n",
+    "                'date': row['date'],\n",
+    "                'home_team': row['home_team'],\n",
+    "                'away_team': row['away_team'],\n",
+    "                'home_score': row['home_score'],\n",
+    "                'away_score': row['away_score'],\n",
+    "                'tournament': row['tournament'],\n",
+    "                'city': row['city'],\n",
+    "                'country': row['country'],\n",
+    "                'neutral': row['neutral']\n",
+    "            })\n",
+    "            if len(batch_data) >= batch_size:  # If batch size is reached\n",
+    "                connection.execute(text(insert_matches_query), batch_data)\n",
+    "                batch_data = []  # Reset batch data\n",
+    "        if batch_data:  # Insert any remaining data\n",
+    "            connection.execute(text(insert_matches_query), batch_data)\n",
+    "        print(\"Data inserted into 'matches' successfully.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error inserting data into 'matches': {e}\")\n",
+    "\n",
+    "# Similarly, you can batch the other inserts for goalscorers and shootouts.\n",
+    "insert_goalscorers_query = \"\"\"\n",
+    "INSERT INTO goalscorers (match_id, team, scorer, minute, penalty, own_goal)\n",
+    "VALUES (:match_id, :team, :scorer, :minute, :penalty, :own_goal)\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    with engine.begin() as connection:\n",
+    "        batch_data = []\n",
+    "        for index, row in df_goalscorers.iterrows():\n",
+    "            match_query = \"\"\"\n",
+    "            SELECT match_id FROM matches \n",
+    "            WHERE date = :date AND home_team = :home_team AND away_team = :away_team\n",
+    "            \"\"\"\n",
+    "            match_result = connection.execute(text(match_query), {\n",
+    "                'date': row['date'],\n",
+    "                'home_team': row['home_team'],\n",
+    "                'away_team': row['away_team']\n",
+    "            }).fetchone()\n",
+    "\n",
+    "            if match_result:\n",
+    "                match_id = match_result[0]\n",
+    "                batch_data.append({\n",
+    "                    'match_id': match_id,\n",
+    "                    'team': row['team'],\n",
+    "                    'scorer': row['scorer'],\n",
+    "                    'minute': row['minute'],\n",
+    "                    'penalty': row['penalty'],\n",
+    "                    'own_goal': row['own_goal']\n",
+    "                })\n",
+    "\n",
+    "            if len(batch_data) >= batch_size:\n",
+    "                connection.execute(text(insert_goalscorers_query), batch_data)\n",
+    "                batch_data = []\n",
+    "        if batch_data:\n",
+    "            connection.execute(text(insert_goalscorers_query), batch_data)\n",
+    "        print(\"Data inserted into 'goalscorers' successfully.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error inserting data into 'goalscorers': {e}\")\n",
+    "\n",
+    "# Repeat similar process for 'shootouts' table.\n",
+    "insert_shootouts_query = \"\"\"\n",
+    "INSERT INTO shootouts (match_id, winner, first_shooter)\n",
+    "VALUES (:match_id, :winner, :first_shooter)\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    with engine.begin() as connection:\n",
+    "        batch_data = []\n",
+    "        for index, row in df_shootouts.iterrows():\n",
+    "            match_query = \"\"\"\n",
+    "            SELECT match_id FROM matches \n",
+    "            WHERE date = :date AND home_team = :home_team AND away_team = :away_team\n",
+    "            \"\"\"\n",
+    "            match_result = connection.execute(text(match_query), {\n",
+    "                'date': row['date'],\n",
+    "                'home_team': row['home_team'],\n",
+    "                'away_team': row['away_team']\n",
+    "            }).fetchone()\n",
+    "\n",
+    "            if match_result:\n",
+    "                match_id = match_result[0]\n",
+    "                batch_data.append({\n",
+    "                    'match_id': match_id,\n",
+    "                    'winner': row['winner'],\n",
+    "                    'first_shooter': row['first_shooter']\n",
+    "                })\n",
+    "\n",
+    "            if len(batch_data) >= batch_size:\n",
+    "                connection.execute(text(insert_shootouts_query), batch_data)\n",
+    "                batch_data = []\n",
+    "        if batch_data:\n",
+    "            connection.execute(text(insert_shootouts_query), batch_data)\n",
+    "        print(\"Data inserted into 'shootouts' successfully.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error inserting data into 'shootouts': {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Queries on SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Two simple queries on SQL\n",
+    "\n",
+    "The two simple queries are:\n",
+    "1. Games where Portugal scored more than 3 goals after 2003\n",
+    "2. Games where Australia and Sweden played against each other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.sql import text\n",
+    "\n",
+    "# Query 1\n",
+    "query1 = text(\"\"\"\n",
+    "SELECT *\n",
+    "FROM matches\n",
+    "WHERE (\n",
+    "        (home_team = 'Portugal' AND home_score > 3) OR\n",
+    "        (away_team = 'Portugal' AND away_score > 3)\n",
+    "      )\n",
+    "  AND date > '2003-12-31';\n",
+    "\"\"\")\n",
+    "\n",
+    "with engine.connect() as connection:\n",
+    "    results1 = connection.execute(query1)\n",
+    "    print(\"Results for Query 1:\")\n",
+    "    for result in results1:\n",
+    "        print(result)\n",
+    "\n",
+    "# Query 2\n",
+    "query2 = text(\"\"\"\n",
+    "SELECT *\n",
+    "FROM matches\n",
+    "WHERE \n",
+    "    (home_team = 'Australia' AND away_team = 'Sweden') OR\n",
+    "    (home_team = 'Sweden' AND away_team = 'Australia');\n",
+    "\"\"\")\n",
+    "\n",
+    "with engine.connect() as connection:\n",
+    "    results2 = connection.execute(query2)\n",
+    "    print(\"Results for Query 2:\")\n",
+    "    for result in results2:\n",
+    "        print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Two complex queries\n",
+    "The two complex queries are:\n",
+    "\n",
+    "1. Change the neutral field to True for the matches that have more than 5 goals scored and that both teams have played with each other at least 100 times\n",
+    "2. Add a goalscorer to the goalscorers list from Cristiano Ronaldo on minute 90 to the 100 matches with the most difference in goals scored between the two teams, and increment the loser team score by 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SQL query to get team pairs\n",
+    "team_pairs_query = \"\"\"\n",
+    "WITH normalized_matches AS (\n",
+    "    SELECT \n",
+    "        CASE \n",
+    "            WHEN home_team < away_team THEN home_team\n",
+    "            ELSE away_team\n",
+    "        END AS team1,\n",
+    "        CASE \n",
+    "            WHEN home_team < away_team THEN away_team\n",
+    "            ELSE home_team\n",
+    "        END AS team2\n",
+    "    FROM matches\n",
+    ")\n",
+    "SELECT \n",
+    "    team1 AS home_team, \n",
+    "    team2 AS away_team, \n",
+    "    COUNT(*) AS match_count\n",
+    "FROM normalized_matches\n",
+    "GROUP BY team1, team2\n",
+    "HAVING COUNT(*) > 100;\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    with engine.connect() as connection:\n",
+    "        result = connection.execute(text(team_pairs_query))\n",
+    "        team_pairs = [{\"home_team\": row[\"home_team\"], \"away_team\": row[\"away_team\"]} for row in result]\n",
+    "        print(\"Team pairs that have played at least 100 times:\", team_pairs)\n",
+    "except Exception as e:\n",
+    "    print(f\"Error fetching team pairs: {e}\")\n",
+    "\n",
+    "# SQL query to update matches\n",
+    "update_matches_query = \"\"\"\n",
+    "WITH team_pairs AS (\n",
+    "    SELECT \n",
+    "        CASE \n",
+    "            WHEN home_team < away_team THEN home_team\n",
+    "            ELSE away_team\n",
+    "        END AS team1,\n",
+    "        CASE \n",
+    "            WHEN home_team < away_team THEN away_team\n",
+    "            ELSE home_team\n",
+    "        END AS team2\n",
+    "    FROM matches\n",
+    "    GROUP BY team1, team2\n",
+    "    HAVING COUNT(*) > 100\n",
+    ")\n",
+    "UPDATE matches\n",
+    "SET neutral = TRUE\n",
+    "WHERE (\n",
+    "        (home_team, away_team) IN (\n",
+    "            SELECT team1, team2 FROM team_pairs\n",
+    "        ) \n",
+    "        OR \n",
+    "        (home_team, away_team) IN (\n",
+    "            SELECT team2, team1 FROM team_pairs\n",
+    "        )\n",
+    "      )\n",
+    "  AND (home_score + away_score) > 5;\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    with engine.connect() as connection:\n",
+    "        result = connection.execute(text(update_matches_query))\n",
+    "        print(f\"Rows updated: {result.rowcount}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error updating matches: {e}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -589,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
