--- a/BDAProject_organized.ipynb
+++ b/BDAProject_organized.ipynb
@@ -387,12 +387,12 @@
     "results = collection_results.find(querie1['query'])\n",
     "print(\"Results for querie 1:\")\n",
     "for result in results:\n",
-    "    print(result)\n",
+    "    print(\"Date:\", result['date'], \", Home team:\", result['home_team'], \", Away team:\", result['away_team'], \", Home score:\", result['home_score'], \", Away score:\", result['away_score'], \", Tournament:\", result['tournament'], \", City:\", result['city'], \", Country:\", result['country'], \", Neutral:\", result['neutral'], \", Goalscorers:\", result['goalscorers'], \", Shootout:\", result['shootout'])\n",
     "    \n",
     "results = collection_results.find(querie2['query'])\n",
     "print(\"Results for querie 2:\")\n",
     "for result in results:\n",
-    "    print(result)\n"
+    "    print(\"Date:\", result['date'], \", Home team:\", result['home_team'], \", Away team:\", result['away_team'], \", Home score:\", result['home_score'], \", Away score:\", result['away_score'], \", Tournament:\", result['tournament'], \", City:\", result['city'], \", Country:\", result['country'], \", Neutral:\", result['neutral'], \", Goalscorers:\", result['goalscorers'], \", Shootout:\", result['shootout'])\n"
    ]
   },
   {
@@ -603,7 +603,7 @@
     "# password = \"1234\"\n",
     "# Rafael\n",
     "# username = 'root'\n",
-    "# password = \"1234\"\n",
+    "# password = \"olaolaola\"\n",
     "# Miguel Borges\n",
     "# username = 'root'\n",
     "# password = \"1234\"\n",
@@ -990,7 +990,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1004,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
